--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
-  "name": "cleanify",
-  "version": "1.0.0",
-  "description": "clenaify test",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "node ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/saidheerajg/cleanify.git"
-  },
-  "author": "\"sai dheeraj\"",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/saidheerajg/cleanify/issues"
-  },
-  "homepage": "https://github.com/saidheerajg/cleanify#readme",
+  "name": "webpack-react-express",
+  "version": "0.2.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.13.4",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "flux": "^2.1.1",
+    "keymirror": "^0.1.1",
+    "object-assign": "^4.0.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.6.5",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "body-parser": "~1.12.3",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.3",
+    "express": "~4.12.3",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.2",
+    "serve-favicon": "^2.3.0",
+    "statics": "~0.1.0",
+    "webpack": "^1.12.13"
+  },
+  "main": "./index.js",
+  "scripts": {
+    "start": "webpack --progress --colors --watch -d",
+    "build": "webpack --progress --colors -p",
+    "server": "node bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
