--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "main": "./index.js",
   "scripts": {
-    "start": "webpack --progress --colors --watch -d",
+    "start": "node ./app.js",
     "build": "webpack --progress --colors -p",
     "server": "node bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
