--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "express": "^4.13.4",
     "flux": "^2.1.1",
     "keymirror": "^0.1.1",
     "object-assign": "^4.0.1",
